bug blocking content on the page by invisible div element

--- a/CSS/SmallDisplays.css
+++ b/CSS/SmallDisplays.css
@@ -35,6 +35,8 @@ h1{
 
 #mobile-menu-layout{
     display: block;
+    width: 0;
+    height: 0;
     position: fixed;
     z-index: 10;
 }
